fix: home redirect spacing

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -71,11 +71,14 @@
     height: 60vh;
 
     overflow: hidden;
+    margin-block: 0.25rem;
 
     transition: all 0.3s ease;
 }
 
 .home-redirect-img-container img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 
     transition: all 0.3s ease;
